--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
-    <link rel="stylesheet" href="assets/css/main.css" />
+    <link
+      rel="stylesheet"
+      href="C:\Users\kevin\Desktop\kevin911221.gitihub.io\main.css"
+    />
   </head>
   <body class="is-preload">
     <!-- Wrapper -->
